# Birb2D-Interpolation-Demo

./: CMakeLists.txt  Makefile  README.md
res/sprites/: map1_project.aseprite
src/: main.cpp
